--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A6DCA06B439D9028C886AE981FBCEF02
-ProjectName=Top Down BP Game Template
+ProjectName=
 
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
