Added footstep sounds to guard animations

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -16,6 +16,9 @@ FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
++NativizeBlueprintAssets=(FilePath="/Game/Blueprints/NPC_Blueprints/PatrolGuard")
++NativizeBlueprintAssets=(FilePath="/Game/Blueprints/AnimNotifyInterface")
++NativizeBlueprintAssets=(FilePath="/Game/Blueprints/NPC_Blueprints/GuardBase_BP")
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
